# Sjeng-10x10

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  attacks.c  book.c  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.in  draw.c  epd.c  eval.c  extvars.h  front.c  makeDiagl.pl  moves.c  neval.c  newbook.c  probe.c  proof.c  protos.h  rcfile.c  search.c  see.c  segtb.c  sjeng.c  sjeng.h  squares.h  standard.lrn  ttable.c  utils.c
.deps/: attacks.Po  book.Po  crazy.Po  draw.Po  ecache.Po  epd.Po  eval.Po  front.Po  learn.Po  leval.Po  moves.Po  neval.Po  newbook.Po  partner.Po  probe.Po  proof.Po  rcfile.Po  search.Po  see.Po  segtb.Po  seval.Po  sjeng.Po  ttable.Po  utils.Po
.deps/.svn/: entries
.deps/.svn/text-base/: book.Po.svn-base  eval.Po.svn-base  front.Po.svn-base  newbook.Po.svn-base  proof.Po.svn-base  search.Po.svn-base  segtb.Po.svn-base  sjeng.Po.svn-base  utils.Po.svn-base
Assets/SinglePieces-50/.svn/: entries
Assets/SinglePieces-50/.svn/text-base/: a1-blackbishop.png.svn-base  a1-blackknight.png.svn-base  a1-blackqueen.png.svn-base  (+83 more)
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
autom4te.cache/.svn/: entries
autom4te.cache/.svn/text-base/: output.1.svn-base  requests.svn-base  traces.0.svn-base  traces.1.svn-base  traces.2.svn-base
books/: Makefile  Makefile.in
books/.svn/: entries
books/.svn/text-base/: Makefile.in.svn-base  Makefile.svn-base
tests/: Makefile  Makefile.in
tests/.svn/: entries
tests/.svn/text-base/: Makefile.in.svn-base  Makefile.svn-base
